fixes alignment help text,

--- a/sass/cms-styles.sass
+++ b/sass/cms-styles.sass
@@ -92,3 +92,7 @@ body div.cms
     &.cms-btn-caution
       @include cms-button($color-danger, $white)
 
+  //modals generic
+  .cms-content-wizard
+    p.help
+      padding-left: 0
